[project]
name = "somnus"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MASG", email = "-"},
]
dependencies = [
    "flet>=0.24.1",
    "sqlalchemy>=2.0.35",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
